# moondream-station

./: .gitignore  Dockerfile  Dockerfile.runpod  LICENSE  MANIFEST.in  MANUAL.md  README.md  api_launcher.py  install_and_run.sh  local_manifest.json  production_manifest.json  pyproject.toml  requirements.txt
.devops/: Dockerfile
app/: build.sh  install.sh  launch.sh  setup_docker.sh  setup_modal.sh
app/hypervisor/: bootstrap.py  clivisor.py  config.py  display_utils.py  hypervisor.py  hypervisor_server.py  inferencevisor.py  manifest.py  misc.py  requirements.txt  update_bootstrap.sh
app/hypervisor/data/: config.json  manifest.json
app/inference_client/: bootstrap.py  main.py  misc.py  model_service.py  requirements.txt
app/inference_client_mac/: main.py  requirements.txt
app/moondream_cli/: cli.py  formatters.py  moondream-cli.py  repl.py
app/moondream_cli/commands/: __init__.py  admin_commands.py  inference_commands.py
app/moondream_cli/utils/: helpers.py  image.py
app/tests/: test_capabilities.py
app/textual_cli/: cli.py  cli.tcss  config.py  formatters.py  moondream-cli.py
app/textual_cli/commands/: admin_commands.py
app/textual_cli/utils/: __init__.py  helpers.py
backends/mds_backend_0/: backend.py  requirements.txt
docker/: entrypoint.sh
moondream_station/: cli.py  commands.py  completion.py  inference.py  launcher.py  repl.py  requirements.txt  session.py  session_manager.py
moondream_station.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
moondream_station/core/: analytics.py  config.py  inference_service.py  manifest.py  manual.py  models.py  rest_server.py  service.py  simple_worker_pool.py  updater.py
moondream_station/ui/: display.py  prompts.py
tests/: simple_test.py
