[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moondream-station"
version = "0.1.5"
description = "Local inference and model management."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "uv>=0.5.11",
    "requests>=2.25",
    "rich>=13.0",
    "posthog>=3.0.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
moondream-station = "moondream_station.launcher:main"

[project.urls]
Homepage = "https://moondream.ai/station"
Repository = "https://github.com/m87/moondream-station"

[tool.setuptools.packages.find]
where = ["."]
include = ["moondream_station*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
moondream_station = ["requirements.txt"]